kyverno-automation/resources/disallow-latest/pod-with-latest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-latest
spec:
  containers:
  - name: nginx
    image: nginx:latest
