kyverno-automation/resources/disallow-latest/pod-without-latest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-without-latest
spec:
  containers:
  - name: nginx
    image: nginx:1.25.3
